--- a/fiche_2/src/main/resources/application.properties
+++ b/fiche_2/src/main/resources/application.properties
@@ -8,3 +8,5 @@ spring.datasource.password=cae
 
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.generate-ddl=true
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
