login remember me

--- a/cae_exercices_fiche3/src/main/resources/application.properties
+++ b/cae_exercices_fiche3/src/main/resources/application.properties
@@ -3,4 +3,9 @@ spring.application.name=cae_exercices_fiche3
 spring.datasource.url=jdbc:postgresql://localhost:5433/cae_db
 spring.datasource.username=cae_user
 spring.datasource.password=cae
+
+
+spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.generate-ddl=true
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
